--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -6,11 +6,21 @@ Resources:
     Properties:
       RetentionInDays: 30
     DeletionPolicy: Retain
-  LogStream:
+  CfnInitLogStream:
     Type: AWS::Logs::LogStream
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: 'VaultMachine/CfnInitLog'
+  VaultInitLogStream:
+    Type: AWS::Logs::LogStream
+    Properties: 
+      LogGroupName: !Sub '${LogGroup}'
+      LogStreamName: 'VaultMachine/VaultInitLog'
+  VaultPostInstallLogStream:
+    Type: AWS::Logs::LogStream
+    Properties: 
+      LogGroupName: !Sub '${LogGroup}'
+      LogStreamName: 'VaultMachine/VaultPostInstallLog'
     DeletionPolicy: Retain
   LambdaDeployRole:
     Type: AWS::IAM::Role
@@ -192,14 +202,16 @@ Resources:
               - Effect: Allow
                 Action:
                   - logs:DescribeLogGroups
+                  - logs:DescribeLogStreams
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}'
               - Effect: Allow
                 Action:
-                  - logs:DescribeLogStreams
                   - logs:PutLogEvents
                 Resource:
-                  - !Sub 'arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}:log-stream:${LogStream}'
+                  - !Sub 'arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}:log-stream:${CfnInitLogStream}'
+                  - !Sub 'arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}:log-stream:${VaultInitLogStream}'
+                  - !Sub 'arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}:log-stream:${VaultPostInstallLogStream}'
         - PolicyName: VaultSSMPolicy
           PolicyDocument:
             Version: '2012-10-17'
@@ -259,78 +271,19 @@ Resources:
       UserData: !Base64
         Fn::Sub: |-
           <script>
-          cfn-init.exe -v -s ${AWS::StackId} -r VaultMachine --region ${AWS::Region}
-          cfn-signal.exe -e %ERRORLEVEL%  --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}
+          cfn-init.exe -v -s ${AWS::StackId} -r VaultMachine --configsets ascending --region ${AWS::Region}
           </script>
       KeyName: !Ref 'KeyName'
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
     Metadata:
       AWS::CloudFormation::Init:
-        config:
+        configSets:
+          ascending:
+            - configSSMAndHostname
+            - configServices
+            - configSignal
+        configSSMAndHostname:
           files:
-            C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json:
-              content:
-                Fn::Sub: |-
-                  {
-                    "IsEnabled":true,
-                    "EngineConfiguration":{
-                      "PollInterval":"00:00:05",
-                      "Components":[
-                          {
-                            "Id":"CfnInitLog",
-                            "FullName":"AWS.EC2.Windows.CloudWatch.CustomLog.CustomLogInputComponent,AWS.EC2.Windows.CloudWatch",
-                            "Parameters":{
-                                "LogDirectoryPath":"C:\\cfn\\log",
-                                "TimestampFormat":"yyyy-MM-dd HH:mm:ss,fff",
-                                "Encoding":"ASCII",
-                                "Filter":"cfn-init.log",
-                                "CultureName":"en-US",
-                                "TimeZoneKind":"Local"
-                            }
-                          },
-                          {
-                            "Id":"VaultInitLog",
-                            "FullName":"AWS.EC2.Windows.CloudWatch.CustomLog.CustomLogInputComponent,AWS.EC2.Windows.CloudWatch",
-                            "Parameters":{
-                                "LogDirectoryPath":"C:\\CyberArk\\logs",
-                                "TimestampFormat":"yyyy-MM-dd HH:mm:ss,fff",
-                                "Encoding":"ASCII",
-                                "Filter":"VaultInit.log",
-                                "CultureName":"en-US",
-                                "TimeZoneKind":"Local"
-                            }
-                          },
-                          {
-                            "Id":"VaultInitLog",
-                            "FullName":"AWS.EC2.Windows.CloudWatch.CustomLog.CustomLogInputComponent,AWS.EC2.Windows.CloudWatch",
-                            "Parameters":{
-                                "LogDirectoryPath":"C:\\CyberArk\\logs",
-                                "TimestampFormat":"yyyy-MM-dd HH:mm:ss,fff",
-                                "Encoding":"ASCII",
-                                "Filter":"VaultPostInstall.log",
-                                "CultureName":"en-US",
-                                "TimeZoneKind":"Local"
-                            }
-                          },
-                          {
-                            "Id":"CloudWatchCfnInitLog",
-                            "FullName":"AWS.EC2.Windows.CloudWatch.CloudWatchLogsOutput,AWS.EC2.Windows.CloudWatch",
-                            "Parameters":{
-                                "AccessKey":"",
-                                "SecretKey":"",
-                                "Region": "${AWS::Region}",
-                                "LogGroup": "${LogGroup}",
-                                "LogStream": "${LogStream}"
-                            }
-                          }
-                      ],
-                      "Flows":{
-                          "Flows":[
-                            "CfnInitLog,CloudWatchCfnInitLog"
-                          ]
-                      }
-                    }
-                  }
             C:\CyberArk\KMSPolicy.json:
               content:
                 Fn::Sub: |-
@@ -343,16 +296,48 @@ Resources:
                 files:
                   - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
-            1-restartSSM:
+            1-downloadLatestSSM:
               command: >
-                !Sub 'powershell.exe -Command C:\CyberArk\VaultInit.ps1 -vaultFilesBucket ${VaultFilesBucket} `
-                -licenseFileKey ${LicenseFile} -recoveryPublicKey ${RecoveryPublicKey} -region ${AWS::Region} `
-                -ssmMasterPassParamID ${StoreMasterPassword.SsmId} -ssmAdminPassParamID ${StoreAdminPassword.SsmId} `
-                -vaultInstancesRole ${VaultInstancesRole} -vaultHostName ${VaultHostName}' 
+                powershell.exe -Command [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe" -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe" -UseBasicParsing
               waitAfterCompletion: '0'
               ignoreErrors: 'true'
-            99-signalCompletion:
-              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}'
+            2-updateLatestSSM:
+              command: >
+                powershell.exe -Command Start-Process -FilePath $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S" -Wait
+              waitAfterCompletion: '0'
+              ignoreErrors: 'true'
+            3-removeLatestSSM:
+              command: >
+                powershell.exe -Command rm -Force $env:USERPROFILE\Desktop\SSMAgent_latest.exe
+              waitAfterCompletion: '0'
+              ignoreErrors: 'true'
+            4-restartSSM:
+              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
+              waitAfterCompletion: '60'
+              ignoreErrors: 'true'
+        configServices:
+          commands:
+            1-configcw:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${CfnInitLogStream} -VaultInitLogStream ${VaultInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -Region ${AWS::Region}
+            1-download:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
+              waitAfterCompletion: '0'
+            2-postInstall:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk_init\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -LicenseFilePath "C:\CyberArk\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\recoveryPublic.key" -Region ${AWS::Region}
+              waitAfterCompletion: '0'
+            3-removePermissions:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk_init\VauleRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
+              waitAfterCompletion: '0'
+        configSignal:
+          commands:
+            0-signalCompletion:
+              command: !Sub >
+                cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}
+              waitAfterCompletion: '0'
     CreationPolicy:
       ResourceSignal:
         Timeout: PT15M
@@ -503,7 +488,7 @@ Mappings:
     us-east-2:
       Vault: ami-068bc4ecc92db8199
     eu-west-2:
-      Vault: ami-0a559ff9a29efa431
+      Vault: ami-04de6ccb7c06910b1
     us-west-1:
       Vault: ami-0f1803a9c76472be5
     us-west-2:
