--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -332,6 +332,11 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk_init\VauleRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
               waitAfterCompletion: '0'
+            4-ChangeHostName:
+              command: !Sub >
+                powershell.exe -Command Rename-Computer -NewName ${ComponentHostName} -Force -Restart
+              waitAfterCompletion: forever
+              ignoreErrors: 'false'
         configSignal:
           commands:
             0-signalCompletion:
@@ -488,7 +493,7 @@ Mappings:
     us-east-2:
       Vault: ami-068bc4ecc92db8199
     eu-west-2:
-      Vault: ami-04de6ccb7c06910b1
+      Vault: ami-0b4f2ea100065dfe5
     us-west-1:
       Vault: ami-0f1803a9c76472be5
     us-west-2:
