--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -11,11 +11,13 @@ Resources:
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: 'VaultMachine/CfnInitLog'
+    DeletionPolicy: Retain
   VaultInitLogStream:
     Type: AWS::Logs::LogStream
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: 'VaultMachine/VaultInitLog'
+    DeletionPolicy: Retain
   VaultPostInstallLogStream:
     Type: AWS::Logs::LogStream
     Properties: 
@@ -320,19 +322,19 @@ Resources:
             1-configcw:
               command: !Sub >
                 powershell.exe -File C:\CyberArk_init\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${CfnInitLogStream} -VaultInitLogStream ${VaultInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -Region ${AWS::Region}
-            1-download:
+            2-download:
               command: !Sub >
                 powershell.exe -File C:\CyberArk_init\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
               waitAfterCompletion: '0'
-            2-postInstall:
+            3-postInstall:
               command: !Sub >
                 powershell.exe -File C:\CyberArk_init\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -LicenseFilePath "C:\CyberArk\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\recoveryPublic.key" -Region ${AWS::Region}
               waitAfterCompletion: '0'
-            3-removePermissions:
+            4-removePermissions:
               command: !Sub >
                 powershell.exe -File C:\CyberArk_init\VauleRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
               waitAfterCompletion: '0'
-            4-ChangeHostName:
+            5-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName ${ComponentHostName} -Force -Restart
               waitAfterCompletion: forever
@@ -346,6 +348,7 @@ Resources:
     CreationPolicy:
       ResourceSignal:
         Timeout: PT15M
+    DeletionPolicy: Retain
 Parameters:
   EULA:
     Type: String
